[IMP] stock_transport: graph, gantt and form view of inventory batch
Added transfers and lines field in graph view.
Created gantt view, added default group_by by vehicle_id and dock_id.
Modified display name of batch transfer.
In gantt view, batches in 'draft' state will be displayed with stripes on them.
In batch form view, added volume field in transfers tab.

--- a/stock_transport/views/stock_picking_batch_views.xml
+++ b/stock_transport/views/stock_picking_batch_views.xml
@@ -9,8 +9,33 @@
                 <field name="dock_id" />
                 <field name="vehicle_id" placeholder="Third party provider" />
                 <field name="vehicle_category_id" placeholder="eg: Semi-truck" />
-                <field name="weight" widget="progressbar" invisible="not vehicle_category_id" />
-                <field name="volume" widget="progressbar" invisible="not vehicle_category_id" />
+                <div>
+                    <div class="d-flex justify-content-between" style="width:1rem">
+                        <p style="margin-right: 7rem">Weight</p>
+                        <div class="d-flex ms-5">
+                            <field name="weight_total" invisible="not vehicle_category_id" string="Weight" class="me-2 ms-5"/>
+                            <field name="weight" invisible="not vehicle_category_id" string="" widget="progressbar"/>
+                        </div>
+                    </div>
+                    <div class="d-flex justify-content-between" style="width:15rem">
+                        <p style="margin-right: 7rem">Volume</p>
+                        <div class="d-flex ms-5">
+                            <field name="volume_total" invisible="not vehicle_category_id" string="Volume" class="me-2 ms-5"/>
+                            <field name="volume" invisible="not vehicle_category_id" string="" widget="progressbar"/>
+                        </div>
+                    </div>
+                </div>
+            </xpath>
+        </field>
+    </record>
+
+    <record id="stock_picking_tree_view_inherited" model="ir.ui.view">
+        <field name="name">stock.picking.tree.view</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="stock.vpicktree" />
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='scheduled_date']" position="after">
+                <field name="volume" />
             </xpath>
         </field>
     </record>
@@ -20,14 +45,29 @@
         <field name="model">stock.picking.batch</field>
         <field name="arch" type="xml">
             <graph string="batch_transfers" sample="1">
-                <field name="volume" />
-                <field name="weight" />
+                <field name="transfer_count" />
+                <field name="lines_count" />
             </graph>
         </field>
     </record>
 
+    <record id="stock_picking_batch_gantt_view" model="ir.ui.view">
+        <field name="name">stock.picking.batch.gantt.view</field>
+        <field name="model">stock.picking.batch</field>
+        <field name="arch" type="xml">
+            <gantt
+                date_start="create_date"
+                date_stop="scheduled_date"
+                default_group_by="dock_id,vehicle_id"
+                color="vehicle_id"
+                decoration-info="state == 'draft'">
+                <field name="state" />
+            </gantt>
+        </field>
+    </record>
+
     <record id="stock_picking_batch.stock_picking_batch_action" model="ir.actions.act_window">
-        <field name="view_mode">tree,kanban,form,graph</field>
-        <field name="context">{'search_default_draft': True, 'search_default_in_progress': True, 'graph_mode': 'bar', 'graph_groupbys': ['scheduled_date','vehicle_category_id'],}</field>
+        <field name="view_mode">tree,kanban,form,graph,gantt</field>
+        <field name="context">{'search_default_draft': True, 'search_default_in_progress': True,'graph_mode': 'bar', 'graph_groupbys': ['scheduled_date:day','vehicle_category_id'],}</field>
     </record>
 </odoo>
